[gd_scene load_steps=4 format=2]

[ext_resource path="res://tile.gd" type="Script" id=1]
[ext_resource path="res://assets/isohex.png" type="Texture" id=2]
[ext_resource path="res://assets/selected_mask.png" type="Texture" id=3]

[node name="hex_tile" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
map_pos = Vector2( 0, 0 )
walkable = true

[node name="hex_blank" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
hframes = 2
region_rect = Rect2( 0, 0, 64, 32 )

[node name="select_mask" type="Light2D" parent="hex_blank" index="0"]

enabled = false
editor_only = false
texture = ExtResource( 3 )
offset = Vector2( 32, 16 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1

[node name="over_mask" type="Light2D" parent="hex_blank" index="1"]

enabled = false
editor_only = false
texture = ExtResource( 3 )
offset = Vector2( 32, 16 )
texture_scale = 1.0
color = Color( 1, 1, 1, 0.480392 )
energy = 1.0
mode = 1
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1

[node name="collision" type="CollisionPolygon2D" parent="." index="1"]

build_mode = 0
polygon = PoolVector2Array( 32, 0, 64, 8, 64, 24, 32, 32, 0, 24, 0, 8 )


